fix: overflow and scroll ability on home page

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,13 +1,25 @@
 .home {
   padding: 40px;
   gap: 50px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 400px;
   list-style-position: inside;
+  background-color: var(--grey);
+  overflow-y: scroll;
+  scrollbar-width: 5px;
+}
+
+.home::-webkit-scrollbar {
+  width: 3px;
+}
+
+.home::-webkit-scrollbar-thumb {
+  background-color: whitesmoke;
 }
 
 .upcoming {
-  min-width: 400px;
   padding-left: 50px;
+  height: auto;
   border-left: 2px solid var(--light-grey);
 }
 
