--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--black);
+  position: sticky;
 }
 
 nav {
